# fast_svmlight_loader

./: .gitignore  CMakeLists.txt  README.md
include/fast_svmlight_loader/: c_api.h  data.h  logging.h  omp.h
python/: setup.py
python/fast_svmlight_loader/: __init__.py  compat.py  core.py  libpath.py
src/: data.cc  logging.cc
src/c_api/: c_api.cc  c_api_error.cc  c_api_error.h
